--- a/live-tanks.html
+++ b/live-tanks.html
@@ -604,6 +604,19 @@
     </div>
   </div>
 
+  <!-- Tank Details Modal -->
+  <div id="tankDetailsModal" class="modal">
+    <div class="modal-content" style="max-width: 600px;">
+      <div class="modal-header">
+        <h3 class="modal-title" id="tankDetailsTitle">Tank Details</h3>
+        <button class="close-btn" onclick="closeTankDetails()">&times;</button>
+      </div>
+      <div id="tankDetailsBody">
+        <!-- Tank details will be populated here -->
+      </div>
+    </div>
+  </div>
+
 
   <!-- Firebase SDK -->
   <script type="module">
