--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ input,select{background:rgba(255,255,255,0.9);border-radius:12px;border:none;col
 .reminder-btn{background:linear-gradient(45deg,#2196F3,#1976D2);color:white;box-shadow:0 2px 8px rgba(33,150,243,0.3)}
 .table-btn{background:linear-gradient(45deg,#4CAF50,#388E3C);color:white;box-shadow:0 2px 8px rgba(76,175,80,0.3)}
 .action-btn:hover{transform:translateY(-2px);box-shadow:0 4px 12px rgba(0,0,0,0.2)}
+/* إصلاح تنسيق زر Add Reminder داخل الرابط */
+.button-row a{flex:1;text-decoration:none}
+.button-row a .action-btn{width:100%}
 .help-btn{background:linear-gradient(45deg,#FF9800,#F57C00);color:white;border:none;padding:10px;border-radius:50%;cursor:pointer;font-size:14px;transition:all 0.3s ease;display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;box-shadow:0 2px 6px rgba(255,152,0,0.3)}
 .help-btn:hover{transform:translateY(-2px) scale(1.1);box-shadow:0 4px 10px rgba(255,152,0,0.4)}
 .buttons-container{display:flex;justify-content:center;gap:10px;flex-wrap:wrap;align-items:center;margin-top:15px}
